 o Swapped descriptions of appName and progName in FAQ.
 o Renamed internal libName variable to progName to match external property.
 o Cleaned up Messages.properties to remove prop.libname (prop.progname already
   existed) and to add prop.desc.appname and prop.desc.progname properties.
 o Clean up comments to reference Driver.SQLSERVER and Driver.SYBASE instead of
   TdsCore or old Tds classes.

08/01/2004 - Brian Heineman
 o Partial application of patch [997595] SQL 6.5 Test suite.; general test clean
   up.
 o Updated tests so that they compile with the 1.3 JDK.
 o Updated BlobImpl and ClobImpl so that they compile with the 1.3 JDK.
 o Corrected bug in Blob and Clob file writes where a NullPointerException was
   thrown if close() was called twice on a stream.
 o Corrected bug in JtdsPreparedStatement.getParameter() where the error check
   would incorrectly allow a 0 value (thanks to Mike Hutchinson for the report
   and fix).
 o Corrected bug in TdsData.getVariant() where the SYBUNIQUE case would return
   an incorrect UID string (thanks to Mike Hutchinson for the report and fix).

07/30/2004 - Brian Heineman
 o Updated build process to correct bug [999702] LICENSE file not included in
   source distribution

07/29/2004 - David Kilzer
 o Changed default Sybase port from 4000 to 7100 in faq.html to match value
   of TdsCore.DEFAULT_SYBASE_PORT.
 o Created TdsCore.DEFAULT_LOB_BUFFER_SIZE constant.  Replaced use of "magic"
   values in other classes.
 o Replaced more "magic" values with TdsCore.MIN_PKT_SIZE and
   TdsCore.MAX_PKT_SIZE in various classes.
 o Made TestBase and DatabaseTestCase abstract so that IntelliJ IDEA would
   not try to instantiate them and run them.
 o Created new abstract UnitTestBase class to hold reflection methods used
   by other test classes.
 o Changed NamedPipeUnitTest to extend UnitTestBase.
 o Changed CSUnitTest to use UnitTestBase methods.

07/28/2004 - David Kilzer