@@ -8,6 +8,9 @@ Changes from jTDS 0.8.1
    existed) and to add prop.desc.appname and prop.desc.progname properties.
  o Clean up comments to reference Driver.SQLSERVER and Driver.SYBASE instead of
    TdsCore or old Tds classes.
+ o Add code to check for inherited methods, not just locally declared methods,
+   in UnitTestBase static methods.
+ o Fixed Driver.getPropertyInfo() to parse url when null properties are used.
 
 08/01/2004 - Brian Heineman
  o Partial application of patch [997595] SQL 6.5 Test suite.; general test clean
